objects/Candidates__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Candidate_Name__c</fullName>
        <label>Candidate Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CurrentSalary__c</fullName>
        <label>Current Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Company__c</fullName>
        <label>Current Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ExpectedSalary__c</fullName>
        <label>Expected Salary</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Experience_Level__c</fullName>
        <label>Experience Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Experience_Level</valueSetName>
        </valueSet>
    </fields>
    <label>Candidates</label>
    <nameField>
        <displayFormat>CAND-{0000}</displayFormat>
        <label>Candidate ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidatess</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>